--- a/cafe chaplin_upload/b0/index.html
+++ b/cafe chaplin_upload/b0/index.html
@@ -21,7 +21,7 @@
             </nav>
             <nav class="gnb">
                <a href="index.html" class="logo">
-                    <img src="https://www.qkrtmfrl.github.io/cafe chaplin_upload/date/image/chaplin_logo.png" alt="카페로고" class="pic">
+                    <img src="qkrtmfrl.github.io/cafe chaplin_upload/date/image/chaplin_logo.png" alt="카페로고" class="pic">
                     <p>Cafe Chaplin</p>
                 </a>
                 <ul class="gnb_lst">
