--- a/cafe chaplin_upload/b0/index.html
+++ b/cafe chaplin_upload/b0/index.html
@@ -83,22 +83,22 @@
             <div class="menu_box">
                 <ul class="m_lst">
                     <li class="item1">
-                    <a href="m_menu1.html"><img src="../date/image/menu_coffee.jpg" alt="메뉴선택이미지1"></a>
+                    <a href="m_menu1.html"><img src="../date/image/menu_coffee-min.jpg" alt="메뉴선택이미지1"></a>
                     <a href="m_menu1.html" class="tit">COFFEE</a>
                     <a href="m_menu1.html" class="con">달콤하고 부드러운 커피</a>
                     </li>
                     <li class="item2">
-                    <a href="m_menu2.html"><img src="../date/image/menu_ade.jpg" alt="메뉴선택이미지2"></a>
+                    <a href="m_menu2.html"><img src="../date/image/menu_ade-min.jpg" alt="메뉴선택이미지2"></a>
                     <a href="m_menu2.html" class="tit">FruitJuice/Ade</a>
                     <a href="m_menu2.html" class="con">달콤하고 시원한 음료</a>
                     </li>
                     <li class="item3">
-                    <a href="m_menu3.html"><img src="../date/image/menu_tea.jpg" alt="메뉴선택이미지3"></a>
+                    <a href="m_menu3.html"><img src="../date/image/menu_tea-min.jpg" alt="메뉴선택이미지3"></a>
                     <a href="m_menu3.html" class="tit">Tea</a>
                     <a href="m_menu3.html" class="con">향긋한 차 한 잔의 여유</a>
                     </li>
                     <li class="item4">
-                    <a href="m_menu4.html"><img src="../date/image/menu_dessert.jpg" alt="메뉴선택이미지4"></a>
+                    <a href="m_menu4.html"><img src="../date/image/menu_dessert-min.jpg" alt="메뉴선택이미지4"></a>
                     <a href="m_menu4.html" class="tit">Dessert</a>
                     <a href="m_menu4.html" class="con">부드럽고 달콤한 디저트 메뉴들</a>
                     </li>
@@ -108,7 +108,7 @@
                 <form action="" class="frm1">
                     <ul class="img">
                         <li>
-                            <img src="../date/image/chaplin_logo2.png" alt="카페로고">
+                            <img src="../date/image/chaplin_logo2-min.png" alt="카페로고">
                             <p>Cafe Chaplin</p>
                         </li>
                     </ul>
@@ -119,7 +119,7 @@
                 </form>
                 <div class="community_box">
                     <h3 class="c_tit">Community</h3>
-                    <img src="../date/image/chaplin_logo_background.png" alt="채플린 로고">
+                    <img src="../date/image/chaplin_logo_background-min.png" alt="채플린 로고">
                     <ul>
                         <li class="c_item1"><a href="c_menu1.html">[후기]</a><a href="c_menu1.html" class="tent">인테리어가 깔끔하고이뻐서 또 가고 싶어요</a></li>
                         <li class="c_item2"><a href="c_menu2.html">[QnA]</a><a href="c_menu2.html" class="tent">몇 시에 문 여시나요?</a></li>
@@ -132,7 +132,7 @@
                     <ul class="n_lst">
                         <li>
                             <a href="n_menu1.html#pop1">
-                                <img src="../date/image/news1.jpg" alt="신메뉴 출시">
+                                <img src="../date/image/news1.jpg-min" alt="신메뉴 출시">
                             </a>
                         </li>
                     </ul>
