--- a/c1/index.html
+++ b/c1/index.html
@@ -20,17 +20,9 @@
     <meta property="og:udated_time" content="2019-10-01">
     <title>농림축산식품부</title>
     <link rel="stylesheet" href="./font.css">
+    <link rel="stylesheet" href="./common.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
-        * { margin: 0; padding: 0;}
-        html, body { width: 100%; font-family: "note";}
-        a { text-decoration: none;}
-        ul { list-style: none;}
-        .wrap { width: 100%; height: 100%;}
-        #hd { width: 100%; height: 150px; overflow: hidden;}
-        .tnb { width: 100%; height: 40px; background-color: #1d2088;}
-        .tnb_box { width: 300px; height: 40px; float: right; margin-right: 60px;}
-        .tnb_box li { display: block; float: left; margin-left: 50px;}
-        .tnb_box li a { display: block; line-height: 40px; font-size: 15px; color: #fff;}
     </style>
 </head>
 <body>
@@ -46,64 +38,64 @@
             <nav class="gnb">
                 <ul class="gnb_left">
                     <li>
-                        <a href="">정보공개</a>
+                        <a href="main1.html" class="main">정보공개</a>
                         <ul class="submenu">
-                            <li><a href="">정보공개안내</a></li>
-                            <li><a href="">사전정보공표</a></li>
-                            <li><a href="">감사결과공개</a></li>
-                            <li><a href="">정책실명제</a></li>
+                            <li><a href="https://www.open.go.kr">정보공개안내</a></li>
+                            <li><a href="main1.html">사전정보공표</a></li>
+                            <li><a href="sub1_3.html">감사결과공개</a></li>
+                            <li><a href="sub1_4.html">정책실명제</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="">규제개혁</a>
+                        <a href="main2.html" class="main">규제개혁</a>
                         <ul class="submenu">
-                            <li><a href="">규제란?</a></li>
-                            <li><a href="">규제개선 보도자료</a></li>
-                            <li><a href="">규제법령정보</a></li>
-                            <li><a href="">규제혁신 홍보자료</a></li>
-                            <li><a href="">대국민특별공모</a></li>
-                            <li><a href="">규제정보포털</a></li>
+                            <li><a href="main2.html">규제란?</a></li>
+                            <li><a href="sub2_2.html">규제개선 보도자료</a></li>
+                            <li><a href="sub2_3.html">규제법령정보</a></li>
+                            <li><a href="sub2_4.html">규제혁신 홍보자료</a></li>
+                            <li><a href="sub2_5.html">대국민특별공모</a></li>
+                            <li><a href="sub2_6.html">규제정보포털</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="">알림소식</a>
+                    <li> 
+                        <a href="main3.html" class="main">알림소식</a>
                         <ul class="submenu">
-                            <li><a href="">공지·공고</a></li>
-                            <li><a href="">보도자료</a></li>
-                            <li><a href="">해명/실명</a></li>
-                            <li><a href="">인사/채용</a></li>
-                            <li><a href="">소식지</a></li>
+                            <li><a href="main3.html">공지·공고</a></li>
+                            <li><a href="sub3_2.html">보도자료</a></li>
+                            <li><a href="sub3_3.html">해명/실명</a></li>
+                            <li><a href="sub3_4.html">인사/채용</a></li>
+                            <li><a href="sub3_5.html">소식지</a></li>
                         </ul>
                     </li>
                 </ul>
-                <a href="" class="logo"></a>
+                <a href="index.html" class="logo"></a>
                 <ul class="gnb_right">
                     <li>
-                        <a href="">정책홍보</a>
+                        <a href="main4.html" class="main">정책홍보</a>
                         <ul class="submenu">
-                            <li><a href="">업무계획</a></li>
-                            <li><a href="">정책자료</a></li>
-                            <li><a href="">전자도서관</a></li>
-                            <li><a href="">청탁금지법안내</a></li>
-                            <li><a href="">농업역사문화전시체험관</a></li>
+                            <li><a href="main4.html">업무계획</a></li>
+                            <li><a href="sub4_2.html">정책자료</a></li>
+                            <li><a href="sub4_3.html">전자도서관</a></li>
+                            <li><a href="sub4_4.html">청탁금지법안내</a></li>
+                            <li><a href="sub4_5.html">농업역사문화전시체험관</a></li>
                         </ul>    
                     </li>
                     <li>
-                        <a href="">국민소통</a>
+                        <a href="main5.html" class="main">국민소통</a>
                         <ul class="submenu">
-                            <li><a href="">신고함</a></li>
-                            <li><a href="">국민참여</a></li>
-                            <li><a href="">전자민원</a></li>
-                            <li><a href="">물가정보</a></li>
+                            <li><a href="main5.html">신고함</a></li>
+                            <li><a href="sub5_2.html">국민참여</a></li>
+                            <li><a href="http://www.minwon.go.kr">전자민원</a></li>
+                            <li><a href="sub5_3.html">물가정보</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="">농식품부소개</a>
+                        <a href="main6.html" class="main">농식품부소개</a>
                         <ul class="submenu">
-                            <li><a href="">농림축산식품부 소개</a></li>
-                            <li><a href="">장차관 소개</a></li>
-                            <li><a href="">조직 및 일원</a></li>
-                            <li><a href="">찾아오시는 길</a></li>
+                            <li><a href="main6.html">농림축산식품부 소개</a></li>
+                            <li><a href="sub6_2.html">장차관 소개</a></li>
+                            <li><a href="sub6_3.html">조직 및 일원</a></li>
+                            <li><a href="sub6_4.html">찾아오시는 길</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -115,29 +107,28 @@
                 <input type="radio" name="ra" id="ra2" class="rad">
                 <input type="radio" name="ra" id="ra3" class="rad">
                 <ul class="banner_box">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><img src="./date/banner_pic1.jpg" alt="배너1" class="banner_pic1"></li>
+                    <li><img src="./date/banner_pic2.png" alt="배너2" class="banner_pic2"></li>
+                    <li><img src="./date/banner_pic3.jpg" alt="배너3" class="banner_pic3"></li>
                 </ul>
                 <ul class="btn_box">
-                    <li>
-                    <label for="ra1"></label>
-                    <label for="ra2"></label>
-                    <label for="ra3"></label>
-                    </li>
+                 <li><label for="ra1" class="btn1"></label></li>
+                 <li><label for="ra2" class="btn2"></label></li>
+                 <li><label for="ra3" class="btn3"></label></li>
                 </ul>
             </figure>
             <div class="fast_sys">
-                <h2 class="fast_tit"></h2>
+                <h2 class="fast_tit">자주 찾으시는 서비스</h2>
                 <ul class="fa_box">
-                    <li><img src="../date/icon/people.png" alt="국민참여아이콘"><a href="">국민참여</a></li>
-                    <li><img src="../date/icon/name_tag.png" alt="조직및인원아이콘"><a href="">조직및인원</a></li>
-                    <li><img src="../date/icon/folder.png" alt="민원신청아이콘"><a href="">민원신청</a></li>
-                    <li><img src="../date/icon/file.png" alt="인사/채용아이콘"><a href="">인사/채용</a></li>
-                    <li><img src="../date/icon/box.png" alt="신고함아이콘"><a href="">신고함</a></li>
+                    <li><img src="./date/icon/people_hover.png" alt="국민참여아이콘" class="icon1"><a href="">국민참여</a></li>
+                    <li><img src="./date/icon/name_tag_hover.png" alt="조직및인원아이콘" class="icon2"><a href="">조직및인원</a></li>
+                    <li><img src="./date/icon/folder_hover.png" alt="민원신청아이콘" class="icon3"><a href="">민원신청</a></li>
+                    <li><img src="./date/icon/file_hover.png" alt="인사/채용아이콘" class="icon4"><a href="">인사/채용</a></li>
+                    <li><img src="./date/icon/box_hover.png" alt="신고함아이콘" class="icon5"><a href="">신고함</a></li>
                 </ul>
             </div>
             <div class="con_wrap">
+              <div class="con_fu1"> 
                 <ul class="con_tit">
                     <h4>보도자료</h4>
                 </ul>
@@ -148,6 +139,8 @@
                     <li><a href="">인천 옹진군 백령면 소재 돼지농장 1개소에서 의심축 신고</a></li>
                     <li><a href="">파주‧김포시 특단의 조치 중 관내 돼지 수매 10.4일부터 즉시 추진</a></li>
                 </ul>
+                </div>
+                <div class="con_fu2">
                 <ul class="con_tit">
                     <h4>공지공고</h4>
                 </ul>
@@ -158,6 +151,8 @@
                     <li><a href="">2019년도 농생명산업기술개발사업 지정공모과제 시행계획 재공고</a></li>
                     <li><a href="">2019년도 정부민간 공동펀딩(역매칭) 연구개발사업 자유응모과제 시행계획 재공고(3차)</a></li>
                 </ul>
+                </div>
+                <div class="con_fu3">
                 <ul class="con_tit">
                     <h4>채용공고</h4>
                 </ul>
@@ -168,6 +163,7 @@
                     <li><a href="">농림축산식품부 공모직위 역학조사과장 공개모집</a></li>
                     <li><a href="">농림축산식품부 공공데이터 분야 일반임기제 채용 공고</a></li>
                 </ul>
+                </div>
             </div>
         </main>
         <footer id="ft">
@@ -175,7 +171,7 @@
                 <li><a href="">저작권 정책</a></li>
                 <li><a href="">개인정보처리방침</a></li>
                 <li><a href="">전자우편무단수집거부</a></li>
-                <li><a href="">찾아오시는길</a></li>
+                <li><a href="" class="last">찾아오시는길</a></li>
             </ul>
             <p>Copyright&copy;PARK.Co,Ltd All Right reserved.</p>
         </footer>
