--- a/b1/sub3.html
+++ b/b1/sub3.html
@@ -184,7 +184,7 @@
                     <p class="date">2019-06-18</p>
                 </li>
                 <li class="im_item3">
-                    <img src="./date/photo%20news4.jpg" alt="포토뉴스3">
+                    <img src="./date/photo%20news4.JPG" alt="포토뉴스3">
                     <h3 class="img_tit">자활 생산품 장터</h3>
                     <p class="date">2019-06-13</p>
                 </li>
