--- a/c1/index.html
+++ b/c1/index.html
@@ -177,6 +177,13 @@
         .no2 li { width: 100%; height: 20%;}
         .no2 a { display: block; text-indent: 30px; line-height: 40px; font-size: 16px;}
         .no2 a:hover { text-decoration: underline;}
+        
+/*        푸터영역*/
+        #ft { width: 100vw; height: 200px; margin-top: 150px; background-color: #333;}
+        .b_btn { width: 800px; height: 20px; margin-left: 300px; float: left; margin-top: 40px;}
+        .b_btn li { width: 200px; height: 20px; float: left; }
+        .b_btn a { display: block; text-align: center; color: #fff; line-height: 20px; font-size: 20px;}
+        #ft p { display: block; padding-top: 35px; font-size: 20px; color: #fff;}
     </style>
 </head>
 <body>
