--- a/w0/index.html
+++ b/w0/index.html
@@ -22,6 +22,45 @@
             setTimeout(function(){window.scrollTo(0,1);},100);
         });
     </script>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script>
+        $(document).ready(function(){
+            function nextAni(){
+                $(".img_box").not(":animated").animate({"margin-left":"-100%"},500,function(){
+                $(".img_box li").eq(0).appendTo(".img_box");
+                $(".img_box").css("margin-left","0");
+                });
+            }
+            function prevAni(){
+                $(".img_box li").eq(2).prependTo(".img_box");
+                $(".img_box").css("margin-left","-100%");
+                $(".img_box").not(":animated").animate({"margin-left":"0"},500);
+            }
+            var intv = setInterval(function(){ nextAni()},2900);
+            $(".btn_box1 .l_item").click(function(){
+                clearInterval(intv);
+                prevAni();
+                intv = setInterval(function(){ nextAni()},2900);
+            });
+            $(".btn_box1 .r_item").click(function(){
+                clearInterval(intv);
+                nextAni();
+                intv = setInterval(function(){ nextAni()},2900);
+            });
+            $("btn_box2 li").click(function(){
+                clearInterval(intv);
+                var idx = $(this).index();
+                if(idx!=0){
+                    for(var a=0;a<idx-1;a++){
+                $(".btn_box2 li").eq(0).appendTo($(".btn_box2"));
+                $(".img_box li").eq(0).appendTo($(".img_box"));
+                }
+                nextAni();
+                }
+                intv = setInterval(function(){nextAni();},2900);
+            });
+        });
+    </script>
     <meta name="author" content="seul">
     <!--    홈페이지 제작자 이름 기재-->
     <meta property="og:title" content="대전대성여자고등학교">
@@ -44,6 +83,9 @@
         ul { list-style: none;}
         a { text-decoration: none;}
         input, label, button { background-color: transparent; border: 0; outline: 0;}
+        table { display: table;}
+        tr { display: table-row;}
+        th, td { display: table-cell;}
         .wrap { width: 100%; height: 100%;}
 
         /* 헤더영역 */
@@ -70,6 +112,10 @@
         .page_tit { font-family: "black";}
 
         /* 푸터영역 */
+        #ft { background-color: #333; color: #fff; text-align: center; font-size: 13px;}
+        p { display: block; line-height: 30px;}
+        .adress { padding-top: 10px;}
+        .copyright { clear: both; padding-bottom: 10px;}
 
         /* 미디어쿼리영역 */
         @media screen and (max-width: 767px){
@@ -86,7 +132,8 @@
             .btn_box1 { display: none;}
             .btn_box2 { display: none;}
             /* page2 */
-            .page_tit { font-size: 30px; float: left; margin-top: 15px; margin-left: 20px;}
+            #page2 { height: 80vh;}
+            .page_tit { font-size: 30px; float: left; margin-top: 5%; margin-left: 20px;}
             h4 { margin-top: 30px; margin-left: 15px; float: left; margin-bottom: 10%;}
             .im_box { width: 90%; margin: 0 7%; clear: both;}
             .im_box li { width: 45%; height: 100px; float: left; position: relative; margin-bottom: 30%;}
@@ -94,6 +141,25 @@
             .im_box img { width: 100%; height: 100%;}
             .im_box h5 { text-overflow: ellipsis; white-space: nowrap; overflow: hidden; margin-top: 10px;}
             .im_box p { display: block; margin-top: 10px; font-size: 12px;}
+            /* page3 */
+            #page3 { height: 80vh; position: relative; overflow: hidden;}
+            .intro { width: 80%; overflow: hidden; margin: 0px auto; }
+            .intro_box { width: 400%;  margin: 15% 0;}
+            .intro_box li { float: left; margin-left: 1%; width: 11%;}
+            .intro_box img { width: 100%;}
+            .btn { position: absolute; width: 100%; top: 50%; left: 0;}
+            .btn li { float: left; width: 10%;}
+            .btn .lt_btn { transform: rotate(180deg);}
+            .btn .rt_btn { float: right;}
+            .btn img { height: 50px;}
+            /* page4 */
+            video { width: 80%; margin-left: 10%;}
+            .tb { width: 80%; margin-left: 10%; table-layout: fixed; height: 200px;}
+            td { white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+            .col1 { width: 80%;}
+            .col2 { width: 20%;}
+            /* 푸터영역 */
+            #ft { margin-top: 50px;}
         }
         @media screen and (min-width: 768px) and (max-width: 1024px){
             #hd { height: 17%;}
@@ -116,6 +182,25 @@
             .im_box img { width: 100%; height: 100%;}
             .im_box h5 { text-overflow: ellipsis; white-space: nowrap; overflow: hidden; margin-top: 10px;}
             .im_box p { display: block; margin-top: 10px; font-size: 12px;}
+            /* page3 */
+            #page3 { height: 100vh; position: relative; overflow: hidden;}
+            .intro { width: 80%; overflow: hidden; margin: 0px auto; }
+            .intro_box { width: 400%;}
+            .intro_box li { float: left; margin-left: 1%; width: 11%;}
+            .intro_box img { width: 100%;}
+            .btn { position: absolute; width: 100%; top: 50%; left: 0;}
+            .btn li { float: left; width: 10%;}
+            .btn .lt_btn { transform: rotate(180deg);}
+            .btn .rt_btn { float: right;}
+            .btn img { height: 50px;}
+            /* page4 */
+            video { width: 80%; margin-left: 10%;}
+            .tb { width: 80%; margin-left: 10%; table-layout: fixed; height: 300px;}
+            td { white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+            .col1 { width: 80%;}
+            .col2 { width: 20%;}
+            /* 푸터영역 */
+            #ft { margin-top: 100px;}
         }
         @media screen and (min-width: 1025px){
             #hd {height: 25%;}
@@ -148,16 +233,36 @@
             .btn_box1 img { width: 50px; margin: 0 auto; display: block;}
             .btn_box2 { width: 20%;  margin-left: 40%; bottom: 18%;}
             /* page2 */
-            #page2 { height: 100vh; position: relative;}
+            #page2 { height: 80vh; position: relative;}
+            #page2::after { content: ""; display: block; width: 70%; height: 1px; background-color: #ddd; position: absolute; bottom: 0; left: 15%;}
             .page_tit { font-size: 60px; margin-top: 5%; margin-left: 15%; float: left; line-height: 100px;}
             .page_tit::before { content: ""; display: block; width: 100px; height: 10px; background-color: #6292d4; margin-bottom: 20px;}
             h4 { clear: both; margin-left: 15%; font-size: 30px; float: left;}
             .im_box { width: 55%; position: absolute; right: 14%; top: 10%;}
-            .im_box li { width: 30%; height: 250px; float: left; margin-left: 30px; margin-bottom: 10%; border-radius: 10px; overflow: hidden; position: relative;}
-            .im_box img { width: 100%; height: 100%;}
+            .im_box li { width: 30%; height: 250px; float: left; margin-left: 30px; margin-bottom: 10%; border-radius: 10px; overflow: hidden; position: relative; transition: 0.5s; cursor: pointer;}
             .im_box li::before { content: ""; display: block; position: absolute; width: 100%; height: 30%; bottom: 0; background-color: #333;}
+            .im_box li:hover { transform: scale(0.9);}
+            .im_box img { width: 100%; height: 100%;}
             .im_box h5 { position: absolute; top: 75%; left: 5%; color: #fff; text-align: center; width: 90%;}
             .im_box p { position: absolute; top: 90%; display: block; width: 30%; left: 35%; color: #fff;}
+            /* page3 */
+            #page3 { height: 55vh; position: relative;}
+            #page3::after { content: ""; display: block; width: 70%; height: 1px; background-color: #ddd; position: absolute; bottom: 0; left: 15%;}
+            .intro_box { width: 50%; position: absolute; right: 15%; top: 10%;}
+            .intro_box li { float: left; width: 15%; margin-left: 5%; cursor: pointer; transition: 0.5s;}
+            .intro_box li:hover { transform: scale(0.8);}
+            .intro_box img { width: 100%;}
+            .btn { display: none;}
+            /* page4 */
+            #page4 { height: 60vh;}
+            #page4 .page_tit { margin-left: 0;}
+            #page4 h4 { margin-left: 0; margin-bottom: 20px;}
+            .video { width: 25%; margin-left: 15%; float: left;}
+            video { clear: both; display: block; width: 100%; margin-top: 20%;}
+            .notice { width: 35%; margin-right: 14%; float: right;}
+            .tb { width: 100%; height: 250px;}
+            .col1 { cursor: pointer;}
+            .col1:hover { text-decoration: underline;}
         }
     </style>
 </head>
@@ -251,12 +356,18 @@
             <div class="page" id="page3">
                 <h2 class="page_tit">학과소개</h2>
                 <h4>Introduction</h4>
-                <ul class="intro_box">
-                    <li class="in_item"><img src="./data/intro(1).png" alt="미디어디자인과"></li>
-                    <li class="in_item"><img src="./data/intro(2).png" alt="외식조리과"></li>
-                    <li class="in_item"><img src="./data/intro(3).png" alt="경영회계과"></li>
-                    <li class="in_item"><img src="./data/intro(4).png" alt="보건간호과"></li>
-                    <li class="in_item"><img src="./data/intro(5).png" alt="뷰티디자인과"></li>
+                <figure class="intro">
+                    <ul class="intro_box">
+                        <li class="in_item"><img src="./data/intro(1).png" alt="미디어디자인과"></li>
+                        <li class="in_item"><img src="./data/intro(2).png" alt="외식조리과"></li>
+                        <li class="in_item"><img src="./data/intro(3).png" alt="경영회계과"></li>
+                        <li class="in_item"><img src="./data/intro(4).png" alt="보건간호과"></li>
+                        <li class="in_item"><img src="./data/intro(5).png" alt="뷰티디자인과"></li>
+                    </ul>
+                </figure>
+                <ul class="btn">
+                    <li class="lt_btn"><img src="./data/btn.png" alt="왼쪽"></li>
+                    <li class="rt_btn"><img src="./data/btn.png" alt="오른쪽"></li>
                 </ul>
             </div>
             <div class="page" id="page4">
@@ -296,7 +407,7 @@
             </div>
         </main>
         <footer id="ft">
-            <p>(34601)대전광역시 동구 대성2길 20 (가양1동 309번지) <br>
+            <p class="adress">(34601)대전광역시 동구 대성2길 20 (가양1동 309번지) <br>
                 TEL : (042) 670-2000 / FAX:(042) 632-0551 / 민원발급시간 08:20~16:20 <br>
                 사업자 등록 번호:null / 기관 메일:null</p>
             <p class="copyright">Copyrightⓒ 대전대성여자고등학교. All rights reserved.</p>
